# vexa

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  Caddyfile  Dockerfile.backup  Dockerfile.multiarch  Makefile  README.md  docker-compose.arm64.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.github/: semgrep.yml  snyk.policy
.hermes/: vexa-redesign-progress.json
.status/: admin_dashboard.status  apikey_health.status  binary_ws.status  cicd.status  cosign.status  design.status  desktop_utils.status  dev.status  dev_phase2.status  devops.status  discovery.status  fuzz_test.status  hardening.status  helm_charts.status  integration-qa.status  keychain.status  lint.status  mobile_bio_sync.status  mobile_ui.status  orchestrator.status  pm.status  pm_phase2.status  qa.status  rdp_vnc.status  recording.status  release_sign.status  sandbox.status  system_tray.status  terminal_tabs.status  vault_settings.status
01-documents/: roadmap.md
02-application/: .eslintrc.security.js  .gitignore  CLAUDE.md  README.md
02-application/apps/desktop/: Cargo.toml  README.md
02-application/apps/desktop/.openclaw/: workspace-state.json
02-application/apps/desktop/src-frontend/app/: page.tsx
02-application/apps/desktop/src-frontend/components/: SftpPanel.tsx
docker/: prometheus.yml
docs/: beta-guide.md
scripts/: audit-vexa.sh  backup.crontab  backup.sh  backup_test.sh  beta-release.sh  build-all-arch.sh  changelog.sh  check-suspicious.sh  deploy-k8s.sh  fuzz-test.sh  generate-sbom.sh  helm-upgrade.sh  release.sh  (+12 more)
(+648 files in other folders)
